# autopoints

./: .gitignore  README.md  main.py  pyproject.toml
autopoints/: __init__.py  aggregate.py  checkpoint.py  cli.py  gem5.py  metrics.py  paths.py  simpoints.py  simulate.py  sweep.py  sweep_report.py
autopoints/gem5_configs/: __init__.py  se_atomic_simpoint_checkpoints.py  se_kvm_simpoint_checkpoints.py  se_o3_restore_simpoint.py
