[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autopoints"
version = "0.1.0"
description = "Collect Valgrind exp-bbv vectors and SimPoint regions for gem5 checkpointing."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
autopoints = "autopoints.cli:main"
